--- a/src/sections/Projects/Projects.css
+++ b/src/sections/Projects/Projects.css
@@ -66,3 +66,11 @@
     font-size: 0.9rem;
   }
 }
+.swiper-button-next,
+.swiper-button-prev {
+  color: white;
+}
+
+.swiper-pagination-bullet {
+  background-color: #00bfff;
+}
