--- a/src/sections/Home/Home.css
+++ b/src/sections/Home/Home.css
@@ -1,15 +1,20 @@
 /* src/sections/Home.css */
 
 .home {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0e0e0e;
-    color: white;
-    padding: 0 2rem;
-    text-align: center;
-  }
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url("/JoseHike.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  padding: 0 2rem;
+  text-align: center;
+}
+
+
   
   .home-content h1 {
     font-size: 2.5rem;
