--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -61,20 +61,19 @@
     flex-direction: column;
     align-items: center;
     display: none;
-    padding-top: 0;  /* 🔧 remove extra space */
+    padding-top: 0;
     margin-top: 0;
   }
 
-  
-    .navbar-links.active {
-        display: flex;
-    }
+  .navbar-links.active {
+    display: flex;
+    padding-bottom: 2rem; /* 👈 Add this line */
+  }
 
-    .hamburger {
-        display: flex;
-    }
+  .hamburger {
+    display: flex;
+  }
 }
-
 /* Makes the hamburger menu into an X when opened */
 .bar.open:nth-child(1) {
     transform: rotate(45deg) translate(5px, 5px);
